# Netatmo-API-C-

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  netatmoapi++.doxy
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/simple-client/: CMakeLists.txt  main.cpp
examples/simple-hcc-client/: CMakeLists.txt  main.cpp
examples/simple-wa-client/: CMakeLists.txt  main.cpp
examples/simple-ws-client/: CMakeLists.txt
image/: Dockerfile
src/: CMakeLists.txt  curlexception.hpp  loginexception.hpp  measures.cpp  measures.h  module.cpp  module.h  naapiclient.cpp  naapiclient.h  nawsapiclient.cpp  nawsapiclient.h  responseexception.hpp  scopeexit.hpp  station.cpp  station.h
src/core/: naapiclient.cpp  naapiclient.h  naclient.cpp  naclient.h  nahccapiclient.cpp  nahccapiclient.h  nawaapiclient.cpp  nawaapiclient.h  nawsapi.cpp  nawsapi.h  nawsapiclient.cpp  nawsapiclient.h  parsing.cpp  parsing.h  utils.cpp  utils.h
src/core/private/: parsing_p.h  scopeexit.h  utils.h
src/exceptions/: curlexception.cpp  curlexception.h  curlexception.hpp  loginexception.hpp  naapiexception.cpp  naapiexception.h  responseexception.hpp  typenotsupportedexception.hpp
src/model/: measures.cpp  measures.h  module.cpp  module.h  params.h  place.cpp  place.h  station.cpp  station.h
tests/: CMakeLists.txt
tests/integrationTests/: CMakeLists.txt
tests/integrationTests/NAApiClientTest/: CMakeLists.txt  main.cpp
tests/integrationTests/NAClientTest/: CMakeLists.txt  main.cpp
tests/integrationTests/NAHCCApiClientTest/: CMakeLists.txt  main.cpp
tests/integrationTests/NAWSApiClientTest/: CMakeLists.txt  main.cpp
tests/integrationTests/curlTest/: CMakeLists.txt  main.cpp
tests/unitTests/: CMakeLists.txt
tests/unitTests/parseDevicesTest/: CMakeLists.txt  main.cpp
tests/unitTests/utilsTest/: CMakeLists.txt  main.cpp
tests/unitTests/utilsTests/: CMakeLists.txt
